[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/console_label.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/C64_Pro-STYLE.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/UI/overhead_stats.gd" type="Script" id=3]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[node name="over_head_stats_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 0.98164 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 53.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 158.0
margin_bottom = 51.0
color = Color( 0, 0, 0, 1 )

[node name="stats" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="hp_label" type="Label" parent="stats"]
modulate = Color( 0.752941, 0.054902, 0.054902, 1 )
margin_left = 4.0
margin_top = 23.0
margin_right = 77.0
margin_bottom = 36.0
rect_min_size = Vector2( 73, 13 )
custom_fonts/font = ExtResource( 1 )
text = "hp:100"

[node name="spd_label" type="Label" parent="stats"]
modulate = Color( 0.168627, 0.458824, 0.137255, 1 )
margin_left = 98.0
margin_top = 23.0
margin_right = 171.0
margin_bottom = 36.0
rect_min_size = Vector2( 73, 13 )
custom_fonts/font = ExtResource( 1 )
text = "spd:10"

[node name="def_label" type="Label" parent="stats"]
modulate = Color( 0.129412, 0.439216, 0.564706, 1 )
margin_left = 98.0
margin_top = 36.0
margin_right = 171.0
margin_bottom = 49.0
rect_min_size = Vector2( 73, 13 )
custom_fonts/font = ExtResource( 1 )
text = "def:5"

[node name="dmg_label" type="Label" parent="stats"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 4.0
margin_top = 36.0
margin_right = 77.0
margin_bottom = 49.0
rect_min_size = Vector2( 73, 13 )
custom_fonts/font = ExtResource( 1 )
text = "dmg:10"

[node name="name_scroll_bar" type="ScrollContainer" parent="stats"]
margin_left = 3.0
margin_top = 4.0
margin_right = 157.0
margin_bottom = 29.0
rect_min_size = Vector2( 154, -3 )
theme = ExtResource( 4 )
scroll_vertical_enabled = false

[node name="name_label" type="Label" parent="stats/name_scroll_bar"]
margin_right = 171.0
margin_bottom = 13.0
rect_min_size = Vector2( 155, 13 )
custom_fonts/font = SubResource( 1 )
text = "Enemy Name Here"

[node name="remove_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="scroll_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="scroll_timer" to="." method="_on_scroll_timer_timeout"]
